Added docs to root folder and created SPhnx documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ psycopg2-binary==2.9.6
 psycopg2-pool==1.1
 pycodestyle==2.10.0
 pytz==2023.3
+snowballstemmer==2.2.0
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.6.3
 tzdata==2023.3
+urllib3==2.0.3
 whitenoise==6.4.0
